# databao-context-engine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml  ruff.toml  shell.nix
.github/workflows/: build.yml  bump_version_to_stable.yml  pre-commit.yml  publish.yml  publish_tag_triggered.yml  pytest.yml  test.yml
.run/: info.run.xml  main.run.xml
devtools/: perf_dashboard.py
docs/: embeddings-old-kotlin.md  embeddings.md  introspection-scope.md  publishing.md
nemory_tests/: conftest.py
nemory_tests/_utils/: factories.py
nemory_tests/integration/: test_embed_flow.py  test_ollama_embedding_integration.py
nemory_tests/services/: test_chunk_embedding_service.py  test_embedding_shard_resolver.py  test_persistence_service.py
nemory_tests/utils/: factories.py
scripts/: build_dbt_database_context.py
src/databao_context_engine/: __init__.py  databao_context_domain_manager.py  databao_context_engine.py  databao_context_project_manager.py  databao_engine.py  generate_configs_schemas.py  init_domain.py  init_project.py  main.py  plugin_loader.py
src/devtools/: perf_analysis.py
src/nemory/: databao_engine.py  generate_configs_schemas.py  generate_plugins_configs.py  main.py
tests/: conftest.py  test_databao_context_domain_manager.py  test_databao_context_engine.py  test_databao_context_plugin_loader.py  test_databao_context_project_manager.py  test_databao_engine.py  test_engine_run_sql.py  test_generate_configs_schemas.py  test_generate_plugins_configs.py  test_plugin_loader.py
tests/build_sources/: conftest.py  test_build_runner.py  test_build_service.py  test_context_loader.py  test_export_results.py
tests/cli/: test_add_bigquery_datasource_config.py  test_add_datasource_config.py
tests/databases/: test_mssql_connection_string.py  test_postgresql_connection_string.py
tests/datasource_config/: test_add_config.py  test_check_config.py  test_validate_config.py
tests/datasources/: test_check_config.py  test_config_secret_extraction.py  test_create_datasource_interactively.py  test_create_datasource_interactively_duckdb_secret.py  test_datasource_discovery.py  test_datasource_id.py  test_engine_run_sql.py  test_run_sql_postgresql.py  test_sql_readonly.py
tests/event_journal/: conftest.py  test_event_journal.py
tests/integration/: test_e2e_build.py  test_embed_flow.py  test_index_is_up_to_date.py  test_ollama_embedding_integration.py
tests/introspection/: test_property_extract.py
tests/llm/: test_install.py  test_runtime.py  test_service.py
tests/mcp/: conftest.py  test_mcp_server.py  test_mcp_server_runner.py
tests/perf/: test_core.py
tests/plugins/: database_contracts.py  database_test_utils.py  get_loaded_plugins.py  test_clickhouse_db_plugin.py  test_database_utils.py  test_default_build_datasource_plugin.py  test_duckdb_db_plugin.py  test_duckdb_tools.py  test_introspection_scope.py  test_introspection_scope_matcher.py  test_mssql_db_plugin.py  test_mysql_db_plugin.py  test_plugin_loader.py  test_postgresql_db_plugin.py  test_sqlite_db_plugin.py
tests/project/: test_datasource_discovery.py  test_datasource_id.py  test_init_project.py  test_layout.py  test_project_config.py  test_project_secrets.py
tests/recommended_extras/: test_recommended_extras.py
tests/retrieve_embeddings/: test_retrieve_runner.py  test_retrieve_service.py
tests/scripts/: test_build_dbt_database_context.py  test_build_dbt_database_context_e2e.py
tests/search_context/: test_chunk_search_repository.py  test_search_context_service.py
tests/serialisation/: test_yaml.py
tests/serialization/: test_yaml.py
tests/services/: test_chunk_embedding_service.py  test_docling_chunker.py  test_embedding_shard_resolver.py  test_persistence_service.py
tests/storage/: test_migrate.py
tests/templating/: test_renderer.py
tests/utils/: config_wizard.py  dummy_build_plugin.py  factories.py  (+3 more)
(+438 files in other folders)
