[project]
name = "nemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "duckdb>=1.4.1",
    "pyway>=0.3.32",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.12",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-unordered>=0.7.0",
    "ruff>=0.14.2",
    "testcontainers==4.12.0",
    "types-psycopg2>=2.9.21.20251012",
    "types-pyyaml>=6.0.12.20250915",
]

[project.scripts]
nemory = "nemory.main:main"

[tool.uv.build-backend]
source-exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[tool.pytest]
addopts = ["--import-mode=importlib"]