[project]
name = "databao-context-engine"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "duckdb>=1.4.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "pymysql>=1.1.2",
    "clickhouse-connect>=0.10.0",
    "mcp>=1.23.3",
    "pyathena>=3.22.0",
    "snowflake-connector-python>=4.1.0",
    "pydantic>=2.12.4",
    "jinja2>=3.1.6",
    "asyncpg>=0.31.0",
    "asyncio>=4.0.0",
    "asyncpg-stubs>=0.31.1",
]
default-optional-dependency-keys = [
    "recommended",
]


[project.optional-dependencies]
recommended = [
    # todo add postgres and maybe mysql?
]
mssql = [
    "mssql-python>=1.0.0"
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-unordered>=0.7.0",
    "ruff>=0.14.2",
    "testcontainers==4.12.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-pymysql>=1.1.0.20250916",
    "pytest-mock>=3.15.1",
]

[project.scripts]
dce = "databao_context_engine.main:main"
generate_configs_schemas = "databao_context_engine.generate_configs_schemas:main"

[tool.uv]
override-dependencies = ["urllib3>=2.6.3", "filelock>=3.20.3"]

[tool.uv.build-backend]
source-exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[tool.pytest]
addopts = ["--import-mode=importlib"]
strict = true
markers = [
    "recommended_extras: marks tests which are supposed to be run only with recommended set of extras",
]
